--- a/styles.css
+++ b/styles.css
@@ -125,9 +125,9 @@ button:active {
 }
 
 #shootBtn {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
+    position: fixed;
+    top: 320px;
+    left: 80%;
     width: 65px; /* 30% larger than 50px */
     height: 65px;
     background-color: #333;
