--- a/styles.css
+++ b/styles.css
@@ -208,3 +208,21 @@ button:not(.game-btn):active {
 #shootBtn:active {
     transform: scale(0.95);
 }
+
+@media (min-width: 600px){
+    #shootbtn{
+        top: 300px;
+        left: 80%;
+        width: 85px;
+    height: 85px;
+    background-color: #333;
+    border-radius: 50%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    touch-action: none;
+    user-select: none;
+    }
+}
